bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "a14ad3a64e7bf398ab48105aaa0348e032ac87f8",
)

bazel_dep(name = "abseil-cpp", version="20240722.0")
git_override(
    module_name = "abseil-cpp",
    remote = "https://github.com/abseil/abseil-cpp.git",
    commit = "50292b7d50fd0b40dfdfeb53ff455a4336996ec2",
)

bazel_dep(name = "tcmalloc", version = "0.0.0-20240411-5ed309d")
git_override(
    module_name = "tcmalloc",
    remote = "https://github.com/google/tcmalloc.git",
    commit = "3e4f61d26cd3e06b780f92c4a258ddc466adefea",
)

bazel_dep(name = "highway", version = "1.2.0")
