bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)

bazel_dep(name = "abseil-cpp", version="20250127.1")
bazel_dep(name = "tcmalloc", version = "0.0.0-20250331-43fcf6e")

bazel_dep(name = "highway", version = "1.2.0")
git_override(
    module_name = "highway",
    remote = "https://github.com/google/highway.git",
    commit = "12b325bc1793dee68ab2157995a690db859fe9e0",
)
